# TechWorkshop-L300-AI-Apps-and-agents

./: index.md
.devcontainer/: devcontainer.json
.github/workflows/: 0501_deployment.yml  deploy-customer-loyalty-agent.yml
docs/01_deploy_configure_resources/: 01_01.md  01_02.md  01_03.md
docs/02_implement_multimodal_ai_shopping_assistant/: 02_01.md  02_02.md  02_03.md
docs/03_extend_shopping_assistant_with_a2a/: 03_01.md  03_02.md
docs/04_observability_ai_foundry/: 04_01.md  04_02.md  04_03.md  04_observability_ai_foundry.md
docs/05_agentic_devops/: 05_01.md  05_02.md
docs/06_red_teaming_troubleshooting/: 06_01.md  06_02.md  06_03.md
src/: chat_app.py  env_sample.txt  pyproject.toml  requirements.txt
src/a2a/agent/: a2a_server.py  agent_executor.py  product_management_agent.py
src/a2a/api/: chat.py
src/a2a/templates/: index.html
src/app/agents/: agent_initializer.py  agent_processor.py  redTeamingAgent_initializer.py
src/app/servers/: __test_inventory.py
src/app/tools/: aiSearchTools.py  discountLogic.py
src/data/: handoff_service_evaluation_grounded.jsonl  product_catalog.json
src/infra/: DeployAzureResources.bicep  updateRgTags.bicep
src/pipelines/: ingest_to_cosmos.py
src/prompts/: CustomerLoyaltyAgentPrompt.txt
src/services/: agent_service.py  handoff_service.py
src/utils/: env_utils.py  storage_utils.py
